--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "material-ui": "^0.20.2",
     "node-sass": "^4.11.0",
     "react": "16.8.1",
     "react-dom": "16.8.1",
